--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -8,7 +8,8 @@ services:
     environment:
       WORDPRESS_DB_PASSWORD: maeeutovivo
     volumes:
-      - ./blog/wp-newstrick:/var/www/html/wp-content/themes/wp-newstrick
+      - ./blog/wp-content/themes:/var/www/html/wp-content/themes/
+      - ./blog/wp-content/uploads:/var/www/html/wp-content/uploads/
     links:
       - mysql
 
