--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -10,6 +10,7 @@ services:
     volumes:
       - ./blog/wp-content/themes:/var/www/html/wp-content/themes/
       - ./blog/wp-content/uploads:/var/www/html/wp-content/uploads/
+      - ./docker:/var/www/docker/
     links:
       - mysql
 
